updated github url

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h3><b>Letter I</b> open interests</h3>
             <h2>About</h2>
                 <p>Designed and developed by <a href="http://alexberg.in/">Alex Bergin</a></p>
-                <p><a href="#">View project on Github</a></p>
+                <p><a href="https://github.com/alexbergin/youtubetv">View project on Github</a></p>
         </div>
         
         <div id="prefButton">
