updated metadata for sharing, added title functionality

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta property="og:title" content="YouTube TV" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="http://www.alexberg.in/youtubetv/static.gif" />
+        <meta property="og:url" content="http://www.alexberg.in/youtubetv" />
+        
+        <title>YouTube TV</title>
+
         <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,700,300italic,200' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="style.css" />
         
