fixed display error, made video link to current time

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta property="og:title" content="YouTube TV" />
+        <meta property="og:description" content="A never ending stream of YouTube videos that match your interests." />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="http://www.alexberg.in/youtubetv/static.gif" />
         <meta property="og:url" content="http://www.alexberg.in/youtubetv" />
