developed URL sharing via hash

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         
         <div id="preferences">
             <h1>YouTube TV</h1>
-                <p>A never ending stream of YouTube videos that match your interests.</p>
+                <p>A never ending stream of YouTube videos that match your interests.</p><br />
+                <p>Simply press the i button, enter the terms you'd use to search YouTube separated by commas (example: "cats, puppies, surfing"), and enjoy.</p><br />
+                <p>You can share what your selections are with friends by copying your URL and sending it to them.</p>
             <h2>Controls</h2>
                 <p>In addition to the controls in the lower left of your screen, there are a few keyboard shortcuts.</p><br />
                 <h3><b>Left Arrow Key</b> previous video</h3>
